# improve_django_architecture

./: custom_exception.py  manage.py  pyproject.toml  pytest.ini  readme.md
board/: models.py  repository.py  serializer.py  service.py
board/migrations/: 0001_initial.py
improved_test_code/: asgi.py  models.py  repository.py  settings.py  urls.py  wsgi.py
tests/board/: repo_test.py  service_test.py
user/: models.py  repository.py  serializer.py
user/migrations/: 0001_initial.py
